--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/keil/shipping-service/issues"
   },
-  "homepage": "https://github.com/keil/shipping-service#readme"
+  "homepage": "https://github.com/keil/shipping-service#readme",
+  "devDependencies": {
+    "nock": "^10.0.6",
+    "sinon": "^7.3.2"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.17.0"
+  }
 }
